--- a/src/NewQuizlet/css/NewQuizlet.css
+++ b/src/NewQuizlet/css/NewQuizlet.css
@@ -9,8 +9,19 @@
     height: 150px;
     margin-left: 2%px;
 }
-.newquizlet-edit {
-
+.newquizlet-title-msg {
+    color: red;
+}
+.newquizlet-error {
+    width: auto;
+    margin: 0 auto;
+    text-align: center;
+    border: 1.5px solid red;
+    color: red;
+    padding: 10px 0;
+    font-size: 0.8em;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
 .newquizlet-submit {
     margin-left: 30px;
