--- a/src/LearningCenter/ShowCards/css/ShowCards.css
+++ b/src/LearningCenter/ShowCards/css/ShowCards.css
@@ -1,3 +1,28 @@
-.showcard-info > div {
-    
+.showcard-title {
+    width: 65%;
+    font-weight: 600;
+    font-size: 1.2em;
+    border-bottom: 2.5px solid black;
+    margin-top: 20px;
+}
+.showcard-add {
+    margin: 20px 0 0 0;
+    width: 65%;
+    background: transparent;
+    border-bottom: 1px solid black;
+}
+.showcard-info {
+    width: 65%;
+    height: 50px;
+    border-bottom: 1.5px solid black;
+    line-height: 45px;
+    margin-bottom: 5px;
+}
+
+.showcard-star {
+    font-size: 2em; 
+    margin-right: 10px;
+}
+.showcard-pen {
+    font-size: 2em;
 }
