--- a/src/LearningCenter/ShowCards/css/ShowCards.css
+++ b/src/LearningCenter/ShowCards/css/ShowCards.css
@@ -9,7 +9,8 @@
     margin: 20px 0 0 0;
     width: 65%;
     background: transparent;
-    border-bottom: 1px solid black;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 .showcard-info {
     width: 65%;
